# Lambient

./: .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_REFACTORING_PLAN.md  PHASE_8_DETAILED_PLAN.md  PHASE_9_DETAILED_PLAN.md  PHASE_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_COMPLETION_SUMMARY.md  SECURITY_AUDIT_REPORT.md  Start_app.bat  Start_full_stack_working.bat  Start_simple.bat  Start_simple_parent_venv.bat  Things to consider.md  app.py  bleach.py  dotenv.py  mkdocs.yml  ollama_bridge.py  openai.py  pyproject.toml  pytest.ini  requests.py  requirements.txt  setup.bat  setup_ollama.bat
Transcription documents/: REAL_TIME_TRANSCRIPTION_GUIDE.md
backend/: main.py  realtime.py
core/: __init__.py
docs/: architecture.md  index.md
frontend/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
plans/: ORIGINAL_CHAT_PROMPT.md  PHASE_1_REFACTORING_PLAN.md  PHASE_2_REFACTORING_PLAN.md  PHASE_3_PRODUCTION_READINESS_PLAN.md  PHASE_4_PACKAGING_DEPLOYMENT_PLAN.md  PROJECT_REFACTORING_ROADMAP.md  backend_refactor_plan.md
src/: audio_processing.py  config.py  diarization.py  embedding_service.py  encryption.py  llm_agent_enhanced.py  llm_integration.py  prompts.py  recorder.py  token_management.py  transcription.py  ui_components.py  utils.py
tests/: conftest.py  test_agent_json_extraction.py  test_agents.py  test_config.py  test_container.py  test_crypto.py  test_factories.py  test_factory_routing.py  test_imports.py  test_orchestrator.py  test_providers_split.py  test_routes.py  test_routing.py  test_token_service.py  (+4 more)
(+145 files in other folders)
